[gd_scene load_steps=2 format=3 uid="uid://65l60v5mniac"]

[ext_resource type="Script" path="res://addons/miros/module/BehaviorTree/Util/BTGraphEditor/BTGraphNodeBase.gd" id="1"]

[node name="BTGraphNode" type="GraphNode"]
mouse_filter = 1
title = "Node"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.705882, 0.12549, 0.12549, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.690196, 0.576471, 0.113725, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Hint" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Hint"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hint:"

[node name="Content" type="LineEdit" parent="VBoxContainer/Hint"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入结点提示名"

[node name="State" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/State"]
layout_mode = 2
size_flags_horizontal = 3
text = "State:"

[node name="Content" type="Label" parent="VBoxContainer/State"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Action" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Action"]
layout_mode = 2
text = "Action"

[node name="Name" type="HBoxContainer" parent="VBoxContainer/Action"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/Action/Name"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Name:"

[node name="Content" type="Label" parent="VBoxContainer/Action/Name"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Args" type="VBoxContainer" parent="VBoxContainer/Action"]
layout_mode = 2

[node name="Label" type="HBoxContainer" parent="VBoxContainer/Action/Args"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Action/Args/Label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Key"

[node name="Label2" type="Label" parent="VBoxContainer/Action/Args/Label"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "value"

[node name="Label3" type="Label" parent="VBoxContainer/Action/Args/Label"]
layout_mode = 2

[node name="AddActionArg" type="HBoxContainer" parent="VBoxContainer/Action/Args"]
layout_mode = 2

[node name="Key" type="LineEdit" parent="VBoxContainer/Action/Args/AddActionArg"]
layout_mode = 2

[node name="Value" type="LineEdit" parent="VBoxContainer/Action/Args/AddActionArg"]
layout_mode = 2

[node name="AddBtn" type="Button" parent="VBoxContainer/Action/Args/AddActionArg"]
layout_mode = 2
text = "Add"

[node name="Decorators" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Decorators"]
layout_mode = 2
text = "Decorators
"

[connection signal="resize_request" from="." to="." method="_on_GraphNode_resize_request"]
[connection signal="text_changed" from="VBoxContainer/Hint/Content" to="." method="_on_Content_text_changed"]
